<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_undo">Delete Last Entry</string>
    <string name="action_view">View History</string>
    <string name="action_truncate">Clear History</string>
    <string name="action_email">Email History</string>
    <string name="title_section1">Meat</string>
    <string name="title_section2">Dairy</string>
    <string name="title_section3">Other</string>
    <string name="beef">Beef</string>
    <string name="pork">Pork</string>
    <string name="ham">Ham</string>
    <string name="bacon">Bacon</string>
    <string name="chicken">Chicken</string>
 	<string name="turkey">Turkey</string>
 	<string name="milk">Milk</string>
 	<string name="yogurt">Yogurt</string>
 	<string name="cheese">Cheese</string>
 	<string name="butter">Butter</string>
 	<string name="iceCream">Ice Cream</string>
 	<string name="cream">Cream</string>
 	<string name="eggs">Eggs</string>
	<string name="vegetables">Vegetables</string>
	<string name="fruit">Fruit</string>
	<string name="beans">Beans</string>
	<string name="tofuSeitan">Tofu/Seitan</string>
	<string name="soyProduct">Soy Product</string>
	<string name="almondProduct">Almond Product</string>
	<string name="coconutProduct">Coconut</string>
	
	
</resources>
