<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<!--     <item -->
<!--         android:id="@+id/action_settings" -->
<!--         android:orderInCategory="100" -->
<!--         android:showAsAction="never" -->
<!--         android:title="@string/action_settings"/>  -->

<!--  show these if there is room otherwise to the overflow bar -->
    <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:onClick="aUndo"
        android:title="@string/action_undo"/> 
    <item
        android:id="@+id/action_view"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:onClick="aView"
        android:title="@string/action_view"/>         
    <item
        android:id="@+id/action_truncate"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:onClick="aTruncate"
        android:title="@string/action_truncate"/>
    <item
        android:id="@+id/action_email"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:onClick="aEmail"
        android:title="@string/action_email"/>

</menu>
