<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <!-- <TextView -->
    <!-- android:id="@+id/section_label" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" /> -->

    <Button
        android:id="@+id/button1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button5"
        android:onClick="lBeef"
        android:text="@string/beef" />

       <Button
           android:id="@+id/button2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignRight="@+id/button1"
           android:layout_below="@+id/button1"
           android:onClick="lPork"
           android:text="@string/pork" />
       
       <Button
           android:id="@+id/button3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignRight="@+id/button2"
           android:layout_below="@+id/button2"
           android:onClick="lHam"
           android:text="@string/ham" />
       
    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button3"
        android:layout_below="@+id/button3"
        android:onClick="lBacon"
        android:text="@string/bacon" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/button4"
        android:layout_below="@+id/button4"
        android:onClick="lTurkey"
        android:text="@string/turkey" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button6"
        android:onClick="lChicken"
        android:text="@string/chicken" />

</RelativeLayout>