<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

<!--     <TextView -->
<!--         android:id="@+id/section_label" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" /> -->

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button7"
                android:onClick="lEggs"
                android:text="@string/eggs" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button1"
                android:layout_below="@+id/button1"
                android:onClick="lVegetables"
                android:text="@string/vegetables" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button2"
                android:layout_below="@+id/button2"
                android:onClick="lFruit"
                android:text="@string/fruit" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button3"
                android:layout_below="@+id/button3"
                android:onClick="lBeans"
                android:text="@string/beans" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button4"
                android:layout_below="@+id/button4"
                android:onClick="lTofu"
                android:text="@string/tofuSeitan" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button5"
                android:layout_below="@+id/button5"
                android:onClick="lSoy"
                android:text="@string/soyProduct" />
      
            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/button6"
                android:onClick="lAlmond"
                android:text="@string/almondProduct" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button7"
                android:layout_below="@+id/button7"
                android:onClick="lCoconut"
                android:text="@string/coconutProduct" />

</RelativeLayout>
