<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

<!--     <TextView -->
<!--         android:id="@+id/section_label" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" /> -->

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button5"
                android:onClick="lMilk"
                android:text="@string/milk" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button1"
                android:layout_below="@+id/button1"
                android:onClick="lYogurt"
                android:text="@string/yogurt" />
       
            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button2"
                android:layout_below="@+id/button2"
                android:onClick="lCheese"
                android:text="@string/cheese" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button3"
                android:layout_below="@+id/button3"
                android:onClick="lButter"
                android:text="@string/butter" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/button4"
                android:onClick="lIceCream"
                android:text="@string/iceCream" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/button5"
                android:layout_below="@+id/button5"
                android:onClick="lCream"
                android:text="@string/cream" />

</RelativeLayout>
